--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 
 {% block title %}Home{% endblock %}
+
 {% block content %}
+
+{% if user.is_authenticated %}
+<p>Howdy {{ user.name }}!</p>
+<p><a href="{% url 'index' %}">Logout</a></p>
+{% else %}
+<p>Your are not loged in></p>
+<a href="{% url 'index '%}">Login</a>
 {% endblock %}
