--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}<title>Sign Up</title>{% endblock title %}
+{% block title %}Sign Up{% endblock %}
 
 {% block content %}
+<h2>Sign Up</h2>
 <form method="post">
   {% csrf_token %}
-  {{ form_as.p }}
+  {{ form.as_p }}
   <button type="submit">Sign Up</button>
 </form>
 {% endblock %}
