--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,12 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-<p>Howdy {{ user.name }}!</p>
-<p><a href="{% url 'index' %}">Logout</a></p>
+<p>Howdy {{ user.username }}!</p>
+<p><a href="{% url 'logout' %}">Logout</a></p>
 {% else %}
-<p>Your are not loged in></p>
-<a href="{% url 'index '%}">Login</a>
+<p>Your are not logged in.</p>
+<a href="{% url 'login' %}">Login</a> |
+<a href="{% url 'signup' %}">Sign Up</a>
+{% endif %}
+
 {% endblock %}
