Fix form template variable

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}<title>Login</title>{% endblock title %}
+{% block title %}Login{% endblock title %}
 
 {% block content %}
 <form method="post">
   {% csrf_token %}
-  {{ form_as.p }}
+  {{ form.as_p }}
   <button type="submit">Send</button>
 </form>
 {% endblock %}
