--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,6 +6,6 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Send</button>
+  <button class="btn btn-success ml-2" type="submit">Login</button>
 </form>
 {% endblock %}
