--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,10 +2,10 @@
 
 {% block title %}Forgot Your Password?{% endblock %}
 
-<h1>Forgot your password</h1>
-<p>Enter your email address below, and we'll email you instructions for setting a new one.</p>
 {% block content %}
-<form method=""post>
+<h1>Forgot your password?</h1>
+<p>Enter your email address below, and we'll email you instructions for setting a new one.</p>
+<form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <input class="btn btn-success" type="submit" value="Send me instructions!">
