--- a/templates/article_edit.html
+++ b/templates/article_edit.html
@@ -5,6 +5,6 @@
 <form method="POST">
   {% csrf_token %}
   {{ form.as_p }}
-  <button class="btn btn-info ml-2" type="submit">Update</button>
+  <button class="btn btn-success" type="submit">Update</button>
 </form>
 {% endblock %}
