--- a/templates/article_delete.html
+++ b/templates/article_delete.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Delete</h1>
-<form method="POST">
+<form action="" method="POST">
   {% csrf_token %}
   <p>Are you sure you want to delete "{{ article.title }}"?</p>
   <button class="btn btn-danger ml-2" type="submit">Confirm</button>
