Add jumbotront to index.html template

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,11 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-
-{% if user.is_authenticated %}
-<p>Howdy {{ user.username }}!</p>
-<p><a href="{% url 'logout' %}">Logout</a></p>
-{% else %}
-<p>Your are not logged in.</p>
-<a href="{% url 'login' %}">Login</a> |
-<a href="{% url 'signup' %}">Sign Up</a>
-{% endif %}
-
+<div class="jumbotron">
+  <h1 class="display-4">Newspaper app</h1>
+  <p class="lead">Lorem ipsum dolor est</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="{% url 'articles_list' %}" role="button">View All Articles</a>
+  </p>
+</div>
 {% endblock %}
