--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -6,6 +6,14 @@
   <p>by {{ object.author }} | {{ object.created_at }}</p>
   <p>{{ object.text }}</p>
 </div>
+<div>
+    {% for comment in article.comments.all %}
+    <p>
+      <span class="font-weight-bold">{{ comment.author }} &middot;</span>
+      {{ comment }}
+    </p>
+    {% endfor %}
+  </div>
 <p>
   <a href="{% url 'article_edit' article.pk %}">Edit</a> |
   <a href="{% url 'article_delete' article.pk %}">Delete</a>
