--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,5 +7,6 @@
   {% csrf_token %}
   {{ form.as_p }}
   <button class="btn btn-success ml-2" type="submit">Login</button>
+  <button class="btn btn-outline-warning ml-2" type="submit"><a href="{% url 'password_reset' %}">Forgot your password?</a></button>
 </form>
 {% endblock %}
